data/derived/comb/progs/unify/prog5657.ml.out
Characters 16-28:
  let _ = sumList [1; 2; 3; 4];;
                  ^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
